@@ -76,7 +76,7 @@ public class EmailService {
         helper.setSubject("Tu pasaje de bus para el viaje a " + pasaje.getDestinoViaje());
         helper.setText(htmlBody, true);
 
-        //helper.addInline("busImage", new ClassPathResource("static/images/bus.png"));
+        helper.addInline("busImage", new ClassPathResource("static/bus.png"));
         helper.addInline("qrCodeImage", new ByteArrayResource(qrCode), "image/png");
 
         mailSender.send(mimeMessage);
@@ -89,68 +89,93 @@ public class EmailService {
         DateTimeFormatter timeFormatter = DateTimeFormatter.ofPattern("HH:mm");
 
         return """
-            <!DOCTYPE html>
-            <html lang="es">
-            <head>
-                <meta charset="UTF-8">
-                <style>
-                    body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; margin: 0; padding: 20px; background-color: #f4f4f4; }
-                    .ticket-container { max-width: 800px; margin: auto; border: 1px solid #ddd; border-radius: 15px; display: flex; box-shadow: 0 4px 8px rgba(0,0,0,0.1); background-color: #fff; }
-                    .main-part { flex-grow: 1; padding: 25px; background: #fff8e1; border-top-left-radius: 15px; border-bottom-left-radius: 15px; }
-                    .stub-part { width: 250px; background: linear-gradient(to bottom, #ffc107, #ff9800); color: #333; padding: 25px; border-top-right-radius: 15px; border-bottom-right-radius: 15px; border-left: 2px dashed #fff; text-align: center; }
-                    .header { font-size: 28px; font-weight: bold; color: #4CAF50; letter-spacing: 2px; padding: 10px; background: linear-gradient(to right, #ffc107, #ff9800); border-top-left-radius: 15px; margin: -25px -25px 20px -25px; text-align: left; padding-left: 25px;}
-                    .ticket-info { display: grid; grid-template-columns: 100px 1fr; gap: 8px 15px; margin-bottom: 20px; }
-                    .ticket-info strong { color: #555; }
-                    .route-box { background: #ffc107; border-radius: 10px; padding: 15px; text-align: center; margin-right: 20px; color: #fff; font-weight: bold;}
-                    .main-content { display: flex; align-items: center; }
-                    .stub-header { font-size: 24px; font-weight: bold; color: #fff; letter-spacing: 1px;}
-                </style>
-            </head>
-            <body>
-                <div class="ticket-container">
-                    <div class="main-part">
-                        <div class="header">BUS TICKET <span style="float:right; font-size: 16px; color: #555; margin-top: 8px;">#%s</span></div>
-                        <div class="main-content">
-                            <div>
-                                <div class="ticket-info">
-                                    <strong>Date</strong><span>: %s</span>
-                                    <strong>Time</strong><span>: %s</span>
-                                    <strong>Name</strong><span>: %s</span>
-                                    <strong>Bus</strong><span>: %s</span>
-                                    <strong>Seat</strong><span>: %d</span>
-                                    <strong>Class</strong><span>: B</span>
-                                    <strong>Price</strong><span>: € %.2f</span>
-                                </div>
-                            </div>
-                            <div style="margin-left: auto; text-align: center;">
-                                <div class="route-box">
-                                    <div style="font-size: 20px;">%s</div>
-                                    <div style="font-size: 24px; margin: 5px 0;">↓</div>
-                                    <div style="font-size: 20px;">%s</div>
-                                </div>
-                            </div>
+        <!DOCTYPE html>
+        <html lang="es">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <style>
+                body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; margin: 0; padding: 20px; background-color: #f4f4f4; }
+                .ticket-container { max-width: 800px; margin: auto; border-radius: 15px; display: flex; box-shadow: 0 6px 12px rgba(0,0,0,0.1); background-color: #fff; overflow: hidden; }
+                
+                /* Parte Principal (Izquierda) */
+                .main-part { flex-grow: 1; padding: 30px; background: #fff; display: flex; flex-direction: column; }
+                .header { padding-bottom: 20px; border-bottom: 1px solid #eee; margin-bottom: 20px;}
+                .header-title { font-size: 28px; font-weight: bold; color: #333; letter-spacing: 1px; }
+                .ticket-id { font-size: 16px; color: #888; font-family: monospace;}
+                
+                .content-wrapper { display: flex; justify-content: space-between; align-items: flex-start; gap: 20px; }
+                
+                .ticket-info { display: grid; grid-template-columns: 90px 1fr; gap: 10px 15px; font-size: 15px; }
+                .ticket-info strong { color: #555; font-weight: 600; }
+                .ticket-info span { color: #333; }
+                
+                .route-box { background: #fff8e1; border: 1px solid #ffecc1; border-radius: 10px; padding: 20px; text-align: center; color: #d29c00; font-weight: bold; align-self: center; }
+                .route-box .city { font-size: 22px; font-weight: 700; }
+                .route-box .arrow { font-size: 28px; margin: 8px 0; color: #ffc107; }
+
+                /* Talón (Derecha) */
+                .stub-part {
+                    width: 250px;
+                    background: linear-gradient(135deg, #ffc107, #ffa000);
+                    color: white;
+                    padding: 30px;
+                    border-left: 3px dashed #fff;
+                    text-align: center;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    align-items: center;
+                }
+                .stub-header { font-size: 24px; font-weight: bold; letter-spacing: 1px; text-transform: uppercase; }
+                .stub-part img.bus-image { width: 150px; margin: 15px 0; filter: drop-shadow(0 4px 6px rgba(0,0,0,0.2)); }
+                .stub-part img.qr-code { width: 160px; height: 160px; margin-top: 15px; border: 5px solid white; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
+
+            </style>
+        </head>
+        <body>
+            <div class="ticket-container">
+                <div class="main-part">
+                    <div class="header">
+                        <span class="header-title">BUS TICKET</span>
+                        <span class="ticket-id" style="float: right;">#%s</span>
+                    </div>
+                    <div class="content-wrapper">
+                        <div class="ticket-info">
+                            <strong>Pasajero</strong><span>: %s</span>
+                            <strong>Fecha</strong><span>: %s</span>
+                            <strong>Hora</strong><span>: %s</span>
+                            <strong>Bus</strong><span>: %s</span>
+                            <strong>Asiento</strong><span>: %d</span>
+                            <strong>Precio</strong><span>: € %.2f</span>
+                        </div>
+                        <div class="route-box">
+                            <div class="city">%s</div>
+                            <div class="arrow">↓</div>
+                            <div class="city">%s</div>
                         </div>
                     </div>
-                    <div class="stub-part">
-                        <div class="stub-header">BUS TICKET</div>
-                        <img src="cid:busImage" alt="Bus" style="width: 180px; margin: 20px 0;">
-                        <img src="cid:qrCodeImage" alt="QR Code" style="width: 150px; height: 150px; margin-top: 10px;">
-                        <div style="font-size: 14px; margin-top: 10px; color: #fff; font-weight:bold;">#%s</div>
-                    </div>
                 </div>
-            </body>
-            </html>
-        """.formatted(
-                String.format("%04d %04d", pasaje.getId() / 1000, pasaje.getId() % 1000),
+                <div class="stub-part">
+                    <div class="stub-header">Boarding Pass</div>
+                    <img src="cid:busImage" alt="Bus" class="bus-image">
+                    <img src="cid:qrCodeImage" alt="QR Code" class="qr-code">
+                    <div class="ticket-id">#%s</div>
+                </div>
+            </div>
+        </body>
+        </html>
+    """.formatted(
+                String.format("%04d %04d", pasaje.getId() / 1000, pasaje.getId() % 1000), // ID para el header
+                pasaje.getClienteNombre(),
                 pasaje.getFechaViaje().format(dateFormatter),
                 pasaje.getHoraSalidaViaje().format(timeFormatter),
-                pasaje.getClienteNombre(),
                 pasaje.getOmnibusMatricula(),
                 pasaje.getNumeroAsiento(),
                 pasaje.getPrecio(),
                 pasaje.getOrigenViaje().toUpperCase(),
                 pasaje.getDestinoViaje().toUpperCase(),
-                String.format("%04d %04d", pasaje.getId() / 1000, pasaje.getId() % 1000)
+                String.format("%04d %04d", pasaje.getId() / 1000, pasaje.getId() % 1000) // ID para el talón
         );
     }
 }
